--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" href="/favicon.ico" />
+<link rel="manifest" href="/manifest.json" />
+
     <meta property="twitter:image" content="%PUBLIC_URL%/social-image.png" />
     <meta property="og:image" content="%PUBLIC_URL%/social-image.png" />
     <!--
